--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="sample_js.css">
+    <link rel="stylesheet" href="style.css">
 		<!-- jquery 연결 : CDN		-->
 		<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
-		<script src="sample_js.js"></script>
+		<script src="index.js"></script>
+    </link>
     <title>portfolio</title>
 </head>
     
@@ -28,14 +29,14 @@
         <!-- HOME -->
         <section class="home"> 
             <div id="introduce">
-            <p class="introduce text"></p>
-            <p class="introduce tag">#C언어 #자바 #파이썬 #프론트엔드 #빅데이터 #리눅스</p>
+                <p class="introduce text"></p>
+                <p class="introduce tag">#C언어 #자바 #파이썬 #프론트엔드 #빅데이터 #리눅스</p>
             </div>  
         </section>
 
         <!-- ABOUT -->
         <section class="about">
-            <img src="student.png" style="border-radius: 50%; width: 20%; min-width: 100px;">
+            <img src="image/student.png" style="border-radius: 50%; width: 20%; min-width: 100px;">
             <p><strong id="img-name">DAVIN JUNG</strong></p>
             <hr>
             <div class="about-me">
@@ -117,5 +118,5 @@
 
         </div>
 		
-  </body>
+</body>
 </html>
